fixed some layout issues made it more neat

--- a/resources/style.css
+++ b/resources/style.css
@@ -44,12 +44,15 @@ section {
 	display: flex;
 	border: 1px solid black;
 	margin: 0 auto;
-	max-width: 1200px;
+	max-width: 1266px;
 }
 
 .column {
 	display: flex;
+	flex-direction: column;
 	border: 1px solid black;
+	margin-right: 32px;
+	margin-top: 30px;
 }
 
 .column.large {
@@ -69,6 +72,5 @@ section {
 
 h6 {
 	border: 1px solid black;
-
 }
 
